tests/snapshots/fixtures__fixture@views__static_animation_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string))
          (relationship source:
            (identifier) operator:
            (relationship_operator) destination:
            (identifier))))
      (views body:
        (views_block
          (system_landscape_view body:
            (system_landscape_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier)))))
          (system_landscape_view body:
            (system_landscape_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (bare_value))))))))))
